Добавил прикрепление файла к созданию и редакту тикета, но он пока не отображается в обзоре тикета.

--- a/src/main/webapp/WEB-INF/views/ticket_overview.html
+++ b/src/main/webapp/WEB-INF/views/ticket_overview.html
@@ -17,7 +17,7 @@
     Owner: <span ng-bind="ctrl.ticket.owner.firstName"></span></br>
     Approver: <span ng-bind="ctrl.ticket.approver.firstName"></span></br>
     Assignee: <span ng-bind="ctrl.ticket.assignee.firstName"></span></br>
-    <!--Attachments: <span ng-bind="ctrl.ticket.name"></span></br>-->
+    Attachments: <span ng-bind="ctrl.ticket.name"></span></br>
     Description: <span ng-bind="ctrl.ticket.description"></span></br>
 </div>
 
