--- a/src/main/webapp/WEB-INF/views/ticket_overview.html
+++ b/src/main/webapp/WEB-INF/views/ticket_overview.html
@@ -17,7 +17,16 @@
     Owner: <span ng-bind="ctrl.ticket.owner.firstName"></span></br>
     Approver: <span ng-bind="ctrl.ticket.approver.firstName"></span></br>
     Assignee: <span ng-bind="ctrl.ticket.assignee.firstName"></span></br>
-    Attachments: <span ng-bind="ctrl.ticket.name"></span></br>
+    Attachments:
+    <div>
+        <table>
+            <tr th:each="attachment: ${attachments}">
+                <td th:text="${attachment.id}" />
+                <!--<td><span ng-bind="attachment.content"></span></td>-->
+            </tr>
+        </table>
+    <!--Attachments: <span ng-bind="ctrl.ticket.ticketAttachments"></span></br>-->
+    </div>
     Description: <span ng-bind="ctrl.ticket.description"></span></br>
 </div>
 
