Загрузка работает. Но пока корявая: одного файла с одного источника.

--- a/src/main/webapp/WEB-INF/views/ticket_overview.html
+++ b/src/main/webapp/WEB-INF/views/ticket_overview.html
@@ -22,6 +22,7 @@
         <table>
             <tr th:each="attachment: ${attachments}">
                 <td th:text="${attachment.id}" />
+                <a href="/" th:href="@{/ticketOverview/download}">Download</a>
                 <!--<td><span ng-bind="attachment.content"></span></td>-->
             </tr>
         </table>
